--- a/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
+++ b/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
@@ -1,5 +1,5 @@
 
-<!-- [x] Expressions of Interest that are still open to be filled by a Partner -->
+<!-- Expressions of Interest that are still open to be filled by a Partner -->
 <div th:fragment="pending-expressions-of-interest" id="pending-expressions-of-interest" xmlns:th="http://www.thymeleaf.org">
     
     <div class="row mb-1">
@@ -56,7 +56,7 @@
 
 </div>
 
-<!-- [x] Partner can view and apply for Expressions of Interest that are still open. -->
+<!-- Partner can view and apply for Expressions of Interest that are still open. -->
 <div th:fragment="partner-pending-expressions-of-interest" id="partner-pending-expressions-of-interest" xmlns:th="http://www.thymeleaf.org">
     
     <div class="row">
