--- a/web/src/main/resources/templates/fragments/navigation.html
+++ b/web/src/main/resources/templates/fragments/navigation.html
@@ -2,7 +2,7 @@
     xmlns:th="http://www.thymeleaf.org">
     <div class="container-fluid">
         <button class="btn btn-outline-secondary" id="sidebarToggle">Menu</button>
-        <img th:src="@{~/assets/cqu-logo-white.png}" width="140" height="92"/>
+        <img th:src="@{~/assets/cqu-logo-white.png}" width="140" height="92" src=""/>
         <a class="navbar-brand nav-bar-style nav-bar-title" th:href="@{~/}">Work Integrated Learning Management Application (WILMA)</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
