--- a/web/src/main/resources/templates/fragments/position-details.html
+++ b/web/src/main/resources/templates/fragments/position-details.html
@@ -1,4 +1,4 @@
-<!-- [x] ================ Job View ================ -->
+<!-- ================ Job View ================ -->
 <div th:fragment="job-view" id="job-view" xmlns:th="http://www.thymeleaf.org">
     <div class="form-border center-student-details-form mb-3">
     <div class="form-group row py-3">
@@ -71,7 +71,7 @@
     <div th:replace="fragments/position-details :: application-form"></div>
 </div>
 
-<!-- [x] ================ Placement View ================ -->
+<!-- ================ Placement View ================ -->
 <div th:fragment="placement-view" id="placement-view" xmlns:th="http://www.thymeleaf.org">
     <div class="form-border center-student-details-form mb-3">
     <div class="form-group row py-3">
@@ -127,7 +127,7 @@
     <div th:replace="fragments/position-details :: application-form"></div>
 </div>
 
-<!-- [x] ================ Application Form ================ -->
+<!-- ================ Application Form ================ -->
 <div th:fragment="application-form" xmlns:th="http://www.thymeleaf.org">
     <hr/>
     <div class="form-border center-form mb-3">
