--- a/web/src/main/resources/templates/account-verified.html
+++ b/web/src/main/resources/templates/account-verified.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head th:replace="fragments/head"></head>
-
-  <body class="bg-dark bg-opacity-10">
-    <div th:replace="fragments/navigation :: top-navigation"></div>
-    <div class="container py-5">
-      <title></title>
-        <h3 class="center">Congratulations! Your account has been activated and email is verified!</h3>
-        <h3 class="center"><a href="/login">Login </a> to your account now</h3> 
-    </div>
-    
-  </body>
+    <head th:replace="fragments/head"></head>
+    <title>Success!</title>
+    <body class="bg-dark bg-opacity-10">
+        <div th:replace="fragments/navigation :: top-navigation"></div>
+        <div class="container py-5">
+            <h3 class="center">Congratulations! Your account has been activated and email is verified!</h3>
+            <h3 class="center"><a href="/login">Login </a> to your account now</h3>
+        </div>
+    </body>
 </html>
