--- a/web/src/main/resources/templates/register.html
+++ b/web/src/main/resources/templates/register.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="fragments/head"></head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+<head th:replace="fragments/head"></head>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
 <body onload="showFragment(null)" class="bg-dark bg-opacity-10">
-
-    <div th:replace="fragments/navigation :: top-navigation"></div>
-<div>
-    <div class="w-25 mx-auto mt-3" style="position:relative">
-        <!-- Select the user type -->
-        <label for="userList" class="form-label mb-3 center">Select your account type from the following:</label>
-        <select class="form-select" id="userList" onchange="showFragment(this.value)">
-            <option th:each="opt : ${userOptions}"
-                    th:text="${opt}"
-                    th:value="${opt}">
-            </option>
-        </select>
-        <hr>
+<div th:replace="fragments/navigation :: top-navigation"></div>
+    <div>
+        <div class="w-25 mx-auto mt-3" style="position:relative">
+            <!-- Select the user type -->
+            <label for="userList" class="form-label mb-3 center">Select your account type from the following:</label>
+            <select class="form-select" id="userList" onchange="showFragment(this.value)">
+                <option th:each="opt : ${userOptions}" th:text="${opt}" th:value="${opt}"></option>
+            </select>
+            <hr>
+        </div>
     </div>
-</div>
-    <!-- Each of the 3 registration forms -->
-    <div th:replace="fragments/educatorForm"></div>
-    <div th:replace="fragments/partnerForm"></div>
-    <div th:replace="fragments/studentForm"></div>
+<!-- Each of the 3 registration forms -->
+<div th:replace="fragments/educatorForm"></div>
+<div th:replace="fragments/partnerForm"></div>
+<div th:replace="fragments/studentForm"></div>
 </body>
 <script>
     //Show only the type passed, hide all else
@@ -30,5 +26,6 @@
         document.getElementById("partner-form").hidden  = (userType != "Partner")
         document.getElementById("student-form").hidden  = (userType != "Student")
     }
+
 </script>
 </html>
