--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -37,8 +37,8 @@
                     <td class="text-center align-middle">
                         <div class="mx-auto">
                             <a th:href="@{marketplace-approve?posId={posId} (posId = ${pos.id})}" class="material-symbols-rounded btn-edit" title="Done"><span class="material-symbols-rounded btn-approve">Done</span></a>
-                            <a th:href="@{~/educator/edit-position?type={pType}&id={pid}( pid=${pos.id}, pType=${pos.type} )}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
-                            <a th:href="@{~/educator/delete-position?positionId={id}( id=${pos.id} )}" class="material-symbols-rounded btn-delete" title="Delete">Delete</a>
+                            <a th:href="@{edit-position?type={pType}&id={pid}( pid=${pos.id}, pType=${pos.type} )}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
+                            <a th:href="@{delete-position?positionId={id}( id=${pos.id} )}" class="material-symbols-rounded btn-delete" title="Delete">Delete</a>
                         </div>
                     </td>
                 </tr>
@@ -47,7 +47,7 @@
 
         <script th:inline="javascript">
             /*<![CDATA[*/
-            var data =
+            var pendingData =
                 /*[[${pendingPositions}]]*/
                 /*]]>*/
                 $("#filterPendingApproval").on("keyup", function () {
@@ -55,18 +55,18 @@
                     var value = $(this).val();
 
                     let filteredData = [];
-                    for (let i = 0; i < data.length; i++) {
+                    for (let i = 0; i < pendingData.length; i++) {
                         value = value.toLowerCase();
-                        let id = data[i].id;
-                        let type = data[i].type.toLowerCase();
-                        let provider = data[i].partner.businessName.toLowerCase();
-                        let startDate = formatDate(data[i].startDate);
-                        let endDate = formatDate(data[i].endDate);
-                        let description = data[i].description;
+                        let id = pendingData[i].id;
+                        let type = pendingData[i].type.toLowerCase();
+                        let provider = pendingData[i].partner.businessName.toLowerCase();
+                        let startDate = formatDate(pendingData[i].startDate);
+                        let endDate = formatDate(pendingData[i].endDate);
+                        let description = pendingData[i].description;
 
                         if (id == value || type.includes(value) || provider.includes(value) ||
                             startDate.includes(value) || endDate.includes(value) || description.includes(value)) {
-                            filteredData.push(data[i]);
+                            filteredData.push(pendingData[i]);
                         }
                     }
 
@@ -81,10 +81,12 @@
                                         <td>${formatDate(filteredData[i].endDate)}</td>
                                         <td>${filteredData[i].description}</td>
                                         <td class="text-center align-middle">
-                                            <div class="mx-auto">
-                                                <span class="material-symbols-rounded btn-approve">Done</span>
-                                                <span class="material-symbols-rounded btn-edit" title="Edit">Edit</span>
-                                                <span class="material-symbols-rounded btn-delete">Delete</span>
+                                        <div class="mx-auto">
+                                            ${` 
+                                                <a href="marketplace-approve?posId=${filteredData[i].id}" class="material-symbols-rounded btn-edit" title="Done"><span class="material-symbols-rounded btn-approve">Done</span></a>
+                                                <a href="edit-position?type=${filteredData[i].type}&id=${filteredData[i].id}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
+                                                <a href="delete-position?positionId=${filteredData[i].id}" class="material-symbols-rounded btn-delete" title="Delete">Delete</a>
+                                            `}
                                             </div>
                                         </td>
                                         </tr>`;
@@ -135,8 +137,6 @@
                         <a  th:href="@{~/educator/view-review?type=Placement&id={pid}( pid=${pos.id} )}" class="material-symbols-rounded btn-edit" title="Done"><span class="material-symbols-rounded btn-approve">Done</span></a>
                         <a th:href="@{~/educator/delete-position?positionId={id}( id=${pos.id} )}" class="material-symbols-rounded btn-delete" title="Delete">Delete</a>
                     </div>
-
-
                 </td>
             </tr>
             </tbody>
@@ -178,10 +178,10 @@
                                         <td>${formatDate(filteredData[i].endDate)}</td>
                                         <td>${filteredData[i].description}</td>
                                         <td class="text-center align-middle">
-                                            <div class="mx-auto">
-                                            {`<a  th:href="@{~/educator/view-review?type=Placement&id={pid}( pid=${filteredData[i].id} )}" class="material-symbols-rounded btn-edit" title="Done"><span class="material-symbols-rounded btn-approve">Done</span></a>`}
-                                                <span class="material-symbols-rounded btn-delete">Delete</span>
-                                            </div>
+                                        <div class="mx-auto">
+                                            <a  th:href="@{~/educator/view-review?type=Placement&id={pid}( pid=${pos.id} )}" class="material-symbols-rounded btn-edit" title="Done"><span class="material-symbols-rounded btn-approve">Done</span></a>
+                                            <a th:href="@{~/educator/delete-position?positionId={id}( id=${pos.id} )}" class="material-symbols-rounded btn-delete" title="Delete">Delete</a>
+                                        </div>
                                         </td>
                                         </tr>`;
                         table.innerHTML += row;
@@ -274,9 +274,11 @@
                                 <td>${filteredData[i].description}</td>
                                 <td class="text-center align-middle">
                                     <div class="mx-auto">
-                                        <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
-                                        <span class="material-symbols-rounded btn-delete">delete</span>
-                                    </div>
+                                        ${` 
+                                            <a href="edit-position?type=${filteredData[i].type}&id=${filteredData[i].id}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
+                                            <a href="delete-position?positionId=${filteredData[i].id}" class="material-symbols-rounded btn-delete" title="Delete">Delete</a>
+                                        `}
+                                        </div>
                                 </td>
                                 </tr>`;
                         table.innerHTML += row;
@@ -373,13 +375,10 @@
                     <td>${filteredData[i].description}</td>
                     <td class="text-center align-middle">
                         <div class="mx-auto">
-                            <!-- Pass the position type and id in the link so the details can be displayed -->
-                            ${
-                                filteredData[i].type.toLowerCase() == 'placement'?
-                                `<a class="btn btn-primary" href="/student/marketplace-details?type=placement&id=${filteredData[i].id}">View Placement</a>` :
-                                `<a class="btn btn-primary" href="/student/marketplace-details?type=job&id=${filteredData[i].id}" > View Job</a >`
+                            ${filteredData[i].type.toLowerCase() == 'placement' ?
+                                `<a class='btn form-button' href="marketplace-details?type=placement&id=${filteredData[i].id}">View Placement</a>` :
+                                `<a class='btn form-button' href="marketplace-details?type=job&id=${filteredData[i].id}">View Job</a>`
                             }
-
                         </div>
                     </td>
                     </tr>`;
@@ -467,8 +466,8 @@
                                 <td>${filteredData[i].approved ? 'Approved' : 'Pending'}</td>
                                 <td class="text-center align-middle">
                                     <div class="mx-auto">
-                                        ${`<a class="material-symbols-rounded btn-edit" href="/partner/edit-position?type=${filteredData[i].type}"><span class="material-symbols-rounded btn-edit" > edit</span></a>`}
-                                        <span class="material-symbols-rounded btn-delete" > delete</span>
+                                        ${`<a class="material-symbols-rounded btn-edit" href="edit-position?type=Job&id=${filteredData[i].id}" title="Edit">Edit</a>`}
+	                                    ${`<a class="material-symbols-rounded btn-delete" href="delete-position?positionId=${filteredData[i].id}" title="Delete">Delete</a>`}
                                     </div>
                                 </td>
                                 </tr>`;
@@ -518,9 +517,9 @@
                     <div class="mx-auto">
                         <!-- link passes position type as a request param to dynamically load the edit page -->
                         <!-- NB will need to pass id as well -->
-                        <a th:if="${pla.completed} == true AND ${pla.review} == null" th:href="@{~/partner/add-review?type=Placement&id={pid}( pid=${pla.id} )}" class="btn btn-primary" >Review</a>
-                        <a th:href="@{~/partner/edit-position?type=Placement&id={pid}( pid=${pla.id} )}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
-                        <a th:href="@{~/partner/delete-position?positionId={id}( id=${pla.id} )}" class="material-symbols-rounded btn-delete" title="Delete">Delete</a>
+                        <a th:if="${pla.completed} == true AND ${pla.review} == null" th:href="@{add-review?type=Placement&id={pid}( pid=${pla.id} )}" class="btn form-button" >Review</a>
+                        <a th:href="@{edit-position?type=Placement&id={pid}( pid=${pla.id} )}" class="material-symbols-rounded btn-edit" title="Edit">edit</a>
+                        <a th:href="@{delete-position?positionId={id}( id=${pla.id} )}" class="material-symbols-rounded btn-delete" title="Delete">Delete</a>
                     </div>
                 </td>
             </tr>
@@ -562,10 +561,10 @@
 
                                 <td>${filteredData[i].review == null ? "Unreviewed" : "Reviewed"}</td>
                                 <td class="text-center align-middle">
-                                    <div class="mx-auto">  
-                                        ${filteredData[i].completed && filteredData[i].review == null ? `<a class="btn btn-primary" href="/partner/add-review?type=Placement&id=${filteredData[i].id}">Review</a>` : ``}
-                                        ${`<a class="material-symbols-rounded btn-edit" href="/partner/edit-position?type=type=Placement&id=${filteredData[i].id}" title="Edit"><span class="material-symbols-rounded btn-edit" > edit</span></a>`}
-                                        <span class="material-symbols-rounded btn-delete" > delete</span>
+                                    <div class="mx-auto">
+                                        ${filteredData[i].completed && filteredData[i].review == null ? `<a class="btn form-button" href="add-review?type=Placement&id=${filteredData[i].id}">Review</a>` : ``}
+                                        ${`<a class="material-symbols-rounded btn-edit" href="edit-position?type=type=Placement&id=${filteredData[i].id}" title="Edit">Edit</a>`}
+                                        ${`<a class="material-symbols-rounded btn-delete" href="delete-position?positionId=${filteredData[i].id}" title="Delete">Delete</a>`}
                                     </div>
                                 </td>
                                 </tr>`;
