--- a/web/src/main/resources/templates/educator/expressions-of-interest.html
+++ b/web/src/main/resources/templates/educator/expressions-of-interest.html
@@ -3,7 +3,7 @@
     <head th:replace="fragments/head"></head>
     <link th:href="@{~/css/portal-styles.css}" rel="stylesheet" />
 
-    <body onload="hidePositionsPendingTableIfEmpty()">
+    <body>
         <!-- Top Navigation Bar-->
         <div th:replace="fragments/navigation :: top-navigation"></div>
         <div class="d-flex" id="wrapper">
