--- a/web/src/main/resources/templates/error/500.html
+++ b/web/src/main/resources/templates/error/500.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head th:replace="fragments/head"></head>
 
-  <body class="bg-dark bg-opacity-10">
+  <body>
     <div th:replace="fragments/navigation :: top-navigation"></div>
     <div class="container py-5">
         <h3 class="center">\{{{(>_<)}}}/  Oh now this is not good... But our techies are on it</h3>
